--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -11,6 +11,8 @@
     <link href="~/Areas/Admin/Asset/css/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
+
 </head>
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-success">
