--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Create.cshtml
@@ -29,6 +29,7 @@
                 <!-- Tên Khóa Học -->
                 <div class="mb-3">
                     @Html.LabelFor(model => model.TenKhoaHoc, "Tên Khóa Học", new { @class = "form-label" })
+                     <span class="text-danger">*</span>
                     @Html.TextBoxFor(model => model.TenKhoaHoc, new { @class = "form-control", placeholder = "Nhập tên khóa học" })
                     @Html.ValidationMessageFor(model => model.TenKhoaHoc, "", new { @class = "text-danger" })
                 </div>
@@ -36,6 +37,7 @@
                 <!-- Mô Tả Khóa Học -->
                 <div class="mb-3">
                     @Html.LabelFor(model => model.MoTa, "Mô Tả", new { @class = "form-label" })
+                    <span class="text-danger">*</span>
                     @Html.TextAreaFor(model => model.MoTa, new { @class = "form-control", rows = 5, id = "MoTa" })
 
                     @Html.ValidationMessageFor(model => model.MoTa, "", new { @class = "text-danger" })
@@ -44,6 +46,7 @@
                 <!-- Thời Lượng -->
                 <div class="mb-3">
                     @Html.LabelFor(model => model.ThoiLuong, "Thời Lượng", new { @class = "form-label" })
+                    <span class="text-danger">*</span>  
                     @Html.TextBoxFor(model => model.ThoiLuong, new { @class = "form-control", type = "number", min = 1, placeholder = "Nhập thời lượng (giờ)" })
                     @Html.ValidationMessageFor(model => model.ThoiLuong, "", new { @class = "text-danger" })
                 </div>
