--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Edit.cshtml
@@ -47,7 +47,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.TrangThai, "Trạng Thái Lớp Học", new { @class = "form-label" })
-                        @Html.DropDownListFor(model => model.TrangThai, new SelectList(new[] { "SapMo", "DangHoc", "DaKetThuc" }), new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.TrangThai, new SelectList(new[] { "Sắp Mở", "Đang Học", "Đã Kết Thúc" }), new { @class = "form-control" })
                     </div>
 
                     <div class="col-md-6 mb-3">
