--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Create.cshtml
@@ -27,7 +27,7 @@
                 <div class="mb-3">
                     @Html.LabelFor(model => model.MaKhoaHoc, "Mã Khóa Học", new { @class = "form-label" })
                     <span class="text-danger">*</span>
-                    @Html.TextBoxFor(model => model.MaKhoaHoc, new { @class = "form-control", placeholder = "Nhập tên khóa học" })
+                    @Html.TextBoxFor(model => model.MaKhoaHoc, new { @class = "form-control", placeholder = "Nhập mã khóa học" })
                     @Html.ValidationMessageFor(model => model.MaKhoaHoc, "", new { @class = "text-danger" })
                 </div>
 
