--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
@@ -14,6 +14,13 @@
             @using (Html.BeginForm("Create", "LopHoc", FormMethod.Post, new { enctype = "multipart/form-data" }))
             {
                 @Html.AntiForgeryToken()
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.MaLopHoc, "Mã Lớp Học", new { @class = "form-label" })
+                    <span class="text-danger">*</span>
+                    @Html.TextBoxFor(model => model.MaLopHoc, new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(model => model.MaLopHoc, "", new { @class = "text-danger" })
+                </div>
+
 
                 <div class="row">
                     <div class="col-md-6 mb-3">
