--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/_LopHocTablePartial.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/_LopHocTablePartial.cshtml
@@ -3,6 +3,7 @@
 @foreach (var lophoc in Model)
 {
     <tr class="text-center">
+        <td>@lophoc.MaLopHoc</td>
         <td class="text-start">@lophoc.TenLopHoc</td>
         <td>@(lophoc.KhoaHoc != null ? lophoc.KhoaHoc.TenKhoaHoc : "Chưa có")</td>
         <td>@lophoc.SoTinChi</td>
