--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Index.cshtml
@@ -29,6 +29,7 @@
             <table class="table table-striped align-middle table-bordered">
                 <thead class="table-primary">
                     <tr class="text-center">
+                        <th>STT</th>
                         <th scope="col">Mã Lớp Học</th>
                         <th scope="col">Tên Lớp Học</th>
                         <th scope="col">Tên Khóa Học</th>
