--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Create.cshtml
@@ -1,49 +1,71 @@
 ﻿@model QuanLyThongTinDaoTao.Models.GiangVien
+
 @{
-    ViewBag.Title = "Thêm giảng viên";
+    ViewBag.Title = "Thêm Giảng Viên";
     Layout = "~/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml";
 }
 
-<h2>Thêm giảng viên</h2>
-
-@using (Html.BeginForm("Create", "GiangVien", FormMethod.Post))
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <div class="form-group">
-            <label>Họ và Tên</label>
-            @Html.TextBoxFor(model => model.HoVaTen, new { @class = "form-control", required = "required" })
+<div class="container mt-5">
+    <div class="card shadow-lg">
+        <div class="card-header bg-primary text-white text-center">
+            <h3><i class="fa-solid fa-user-plus"></i> Thêm Giảng Viên</h3>
         </div>
+        <div class="card-body">
+            @using (Html.BeginForm("Create", "GiangVien", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            <label>Ngày sinh</label>
-            @Html.TextBoxFor(model => model.NgaySinh, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date", required = "required" })
-        </div>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.HoVaTen, "Họ và Tên", new { @class = "form-label" })
+                        <span class="text-danger">*</span>
+                        @Html.TextBoxFor(model => model.HoVaTen, new { @class = "form-control", placeholder = "Nhập họ và tên", required = "required" })
+                    </div>
 
-        <div class="form-group">
-            <label>Chuyên môn</label>
-            @Html.TextBoxFor(model => model.ChuyenMon, new { @class = "form-control" })
-        </div>
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.NgaySinh, "Ngày Sinh", new { @class = "form-label" })
+                        <span class="text-danger">*</span>
+                        @Html.TextBoxFor(model => model.NgaySinh, new { @class = "form-control", type = "date", required = "required" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <label>Học hàm</label>
-            @Html.TextBoxFor(model => model.HocHam, new { @class = "form-control" })
-        </div>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.ChuyenMon, "Chuyên Môn", new { @class = "form-label" })
+                        <span class="text-danger">*</span>
+                        @Html.TextBoxFor(model => model.ChuyenMon, new { @class = "form-control", placeholder = "Nhập chuyên môn" })
+                    </div>
 
-        <div class="form-group">
-            <label>Email</label>
-            @Html.TextBoxFor(model => model.Email, new { @class = "form-control", type = "email", required = "required" })
-        </div>
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.HocHam, "Học Hàm", new { @class = "form-label" })
+                        <span class="text-danger">*</span>
+                        @Html.TextBoxFor(model => model.HocHam, new { @class = "form-control", placeholder = "Nhập học hàm" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <label>Số điện thoại</label>
-            @Html.TextBoxFor(model => model.SoDienThoai, new { @class = "form-control", type = "tel", required = "required" })
-        </div>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.Email, "Email", new { @class = "form-label" })
+                        <span class="text-danger">*</span>
+                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", type = "email", placeholder = "Nhập email", required = "required" })
+                    </div>
 
-        <div class="form-group">
-            <input type="submit" value="Thêm mới" class="btn btn-success" />
-            @Html.ActionLink("Hủy", "Index", null, new { @class = "btn btn-secondary" })
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.SoDienThoai, "Số Điện Thoại", new { @class = "form-label" })
+                        <span class="text-danger">*</span>
+                        @Html.TextBoxFor(model => model.SoDienThoai, new { @class = "form-control", type = "tel", placeholder = "Nhập số điện thoại", required = "required" })
+                    </div>
+                </div>
+
+                <div class="text-center">
+                    <button type="submit" class="btn btn-success me-2 btn-lg">
+                        <i class="fa-solid fa-circle-plus"></i> Thêm Giảng Viên
+                    </button>
+                    <a href="@Url.Action("Index")" class="btn btn-secondary btn-lg">
+                        <i class="fas fa-arrow-left me-1"></i> Quay lại
+                    </a>
+                </div>
+            }
         </div>
     </div>
-}
+</div>
