--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -78,7 +78,7 @@
             </nav>
         </div>
         <div id="layoutSidenav_content">
-            <main class="">
+            <main>
                 @RenderBody()
             </main>
             @*<footer class="py-4 bg-light mt-auto">
