--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/Edit.cshtml
@@ -29,8 +29,7 @@
                 </div>
 
                 <div class="mb-3">
-                    @Html.LabelFor(model => model.NgayHoc, "Ngày Học", new { @class = "form-label" })
-                    @Html.TextBoxFor(model => model.NgayHoc, new { @class = "form-control", type = "date", id = "NgayHoc" })
+                    @Html.TextBoxFor(model => model.NgayHoc, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
                     <small class="text-danger" id="NgayHocError"></small>
                     @Html.ValidationMessageFor(model => model.NgayHoc, "", new { @class = "text-danger" })
                 </div>
