--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Create.cshtml
@@ -11,21 +11,22 @@
             <h3><i class="fa-solid fa-user-plus"></i> Thêm Giảng Viên</h3>
         </div>
         <div class="card-body">
-            @using (Html.BeginForm("Create", "GiangVien", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            @using (Html.BeginForm("Create", "GiangVien", FormMethod.Post, new { @class = "form-horizontal" }))
             {
                 @Html.AntiForgeryToken()
-
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.HoVaTen, "Họ và Tên", new { @class = "form-label" })
                         <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.HoVaTen, new { @class = "form-control", placeholder = "Nhập họ và tên", required = "required" })
+                        @Html.ValidationMessageFor(model => model.HoVaTen, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.NgaySinh, "Ngày Sinh", new { @class = "form-label" })
                         <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.NgaySinh, new { @class = "form-control", type = "date", required = "required" })
+                        @Html.ValidationMessageFor(model => model.NgaySinh, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
@@ -34,12 +35,14 @@
                         @Html.LabelFor(model => model.ChuyenMon, "Chuyên Môn", new { @class = "form-label" })
                         <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.ChuyenMon, new { @class = "form-control", placeholder = "Nhập chuyên môn" })
+                        @Html.ValidationMessageFor(model => model.ChuyenMon, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.HocHam, "Học Hàm", new { @class = "form-label" })
                         <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.HocHam, new { @class = "form-control", placeholder = "Nhập học hàm" })
+                        @Html.ValidationMessageFor(model => model.HocHam, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
@@ -48,12 +51,14 @@
                         @Html.LabelFor(model => model.Email, "Email", new { @class = "form-label" })
                         <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.Email, new { @class = "form-control", type = "email", placeholder = "Nhập email", required = "required" })
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.SoDienThoai, "Số Điện Thoại", new { @class = "form-label" })
                         <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.SoDienThoai, new { @class = "form-control", type = "tel", placeholder = "Nhập số điện thoại", required = "required" })
+                        @Html.ValidationMessageFor(model => model.SoDienThoai, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
