--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Edit.cshtml
@@ -1,56 +1,85 @@
 ﻿@model QuanLyThongTinDaoTao.Models.GiangVien
+
 @{
-    ViewBag.Title = "Chỉnh sửa giảng viên";
+    ViewBag.Title = "Chỉnh Sửa Giảng Viên";
     Layout = "~/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml";
 }
 
-<h2>Chỉnh sửa giảng viên</h2>
-
-@using (Html.BeginForm("Edit", "GiangVien", FormMethod.Post))
-{
-    @Html.AntiForgeryToken()
-
-    @Html.HiddenFor(model => model.NguoiDungId) <!-- Đảm bảo ID không bị mất -->
-
-    <div class="form-horizontal">
-        <div class="form-group">
-            <label>Mã giảng viên</label>
-            @Html.TextBoxFor(model => model.MaGiangVien, new { @class = "form-control", @readonly = "readonly" })
+<div class="container mt-5">
+    <div class="card shadow-lg">
+        <div class="card-header bg-warning text-white text-center">
+            <h3><i class="fa-solid fa-pen-to-square"></i> Chỉnh Sửa Giảng Viên</h3>
         </div>
+        <div class="card-body">
+            @using (Html.BeginForm("Edit", "GiangVien", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                @Html.HiddenFor(model => model.NguoiDungId)
 
-        <div class="form-group">
-            <label>Họ và Tên</label>
-            @Html.TextBoxFor(model => model.HoVaTen, new { @class = "form-control" })
-        </div>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.MaGiangVien, "Mã Giảng Viên", new { @class = "form-label" })
+                        @Html.TextBoxFor(model => model.MaGiangVien, new { @class = "form-control", @readonly = "readonly" })
+                    </div>
 
-        <div class="form-group">
-            <label>Ngày sinh</label>
-            @Html.TextBoxFor(model => model.NgaySinh, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date" })
-        </div>
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.HoVaTen, "Họ và Tên", new { @class = "form-label" })
+                        @Html.TextBoxFor(model => model.HoVaTen, new { @class = "form-control", required = "required" })
+                        @Html.ValidationMessageFor(model => model.HoVaTen, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <label>Chuyên môn</label>
-            @Html.TextBoxFor(model => model.ChuyenMon, new { @class = "form-control" })
-        </div>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.NgaySinh, "Ngày Sinh", new { @class = "form-label" })
+                        @Html.TextBoxFor(model => model.NgaySinh, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date", required = "required" })
+                        @Html.ValidationMessageFor(model => model.NgaySinh, "", new { @class = "text-danger" })
+                    </div>
 
-        <div class="form-group">
-            <label>Học hàm</label>
-            @Html.TextBoxFor(model => model.HocHam, new { @class = "form-control" })
-        </div>
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.ChuyenMon, "Chuyên Môn", new { @class = "form-label" })
+                        @Html.TextBoxFor(model => model.ChuyenMon, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.ChuyenMon, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <label>Email</label>
-            @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @readonly = "readonly" })
-        </div>
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.HocHam, "Học Hàm", new { @class = "form-label" })
+                        @Html.TextBoxFor(model => model.HocHam, new { @class = "form-control" })
+                    </div>
 
-        <div class="form-group">
-            <label>Số điện thoại</label>
-            @Html.TextBoxFor(model => model.SoDienThoai, new { @class = "form-control", type = "tel" })
-        </div>
+                    <div class="col-md-6 mb-3">
+                        @Html.LabelFor(model => model.Email, "Email", new { @class = "form-label" })
+                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @readonly = "readonly" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <input type="submit" value="Lưu thay đổi" class="btn btn-primary" />
-            @Html.ActionLink("Hủy", "Index", null, new { @class = "btn btn-secondary" })
+                <div class="row">
+                    <div class="col-md-12 mb-3">
+                        @Html.LabelFor(model => model.SoDienThoai, "Số Điện Thoại", new { @class = "form-label" })
+                        @Html.TextBoxFor(model => model.SoDienThoai, new { @class = "form-control", type = "tel", required = "required" })
+                        @Html.ValidationMessageFor(model => model.SoDienThoai, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary me-2 btn-lg">
+                        <i class="fa-solid fa-save"></i> Lưu Thay Đổi
+                    </button>
+                    <a href="@Url.Action("Index")" class="btn btn-secondary btn-lg">
+                        <i class="fas fa-arrow-left me-1"></i> Quay lại
+                    </a>
+                </div>
+            }
         </div>
     </div>
-}
+</div>
+
+<style>
+    .ck-editor__editable {
+        min-height: 150px;
+        max-height: 600px;
+        resize: vertical;
+        overflow-y: auto;
+    }
+</style>
